--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/polyvitamins/inherit.git"
   },
+  "dependencies": {
+    "mixin": "polyvitamins/mixin"
+  },
   "keywords": [
     "inherit"
   ],
