--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Class multyinherit",
   "main": "src/inherit.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/polyvitamins/inherit/issues"
   },
-  "homepage": "https://github.com/polyvitamins/inherit#readme"
+  "homepage": "https://github.com/polyvitamins/inherit#readme",
+  "devDependencies": {
+    "mocha": "^2.3.4",
+    "should": "^8.0.2"
+  }
 }
