--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "inherit",
-  "version": "1.0.0",
-  "description": "Class multyinherit",
+  "version": "1.1.0",
+  "description": "Class multyinherit (es6 module)",
   "main": "src/inherit.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build-es5": "babel src/inherit.js -o es5.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
   },
   "homepage": "https://github.com/polyvitamins/inherit#readme",
   "devDependencies": {
+    "babel-cli": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
     "mocha": "^2.3.4",
     "should": "^8.0.2"
   }
